<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fon_prof2"
    tools:context=".AddBookScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_mainScreen"
        android:textStyle="bold"
        android:text="@string/add_book_text"
        android:textSize="@dimen/add_book_size"
        android:shadowColor="@color/teal_200"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="7"
        android:layout_marginTop="@dimen/add_book_top"
        android:layout_marginLeft="@dimen/add_book_left"
        />

    <EditText
        android:id="@+id/name_book"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:padding="8dp"
        android:hint="@string/name_book"
        android:textSize="@dimen/size_text_enter_name_book"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="15dp"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/auhtor_book"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:padding="8dp"
        android:hint="@string/auhtor_book"
        android:textSize="@dimen/size_text_enter_name_book"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="15dp"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_button_h"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/button_save"
        android:textColor="@color/button"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/prof"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_button_h"
        android:layout_marginLeft="@dimen/button_nazad_left"
        android:layout_marginTop="@dimen/button_nazad_top"
        android:backgroundTint="@color/main_color"
        android:onClick="onClick"
        android:text="@string/button_nazad"
        android:textColor="@color/button"
        app:cornerRadius="20dp" />


</RelativeLayout>