<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fon3"
    tools:context=".AvtorizScreen">

    <Button
        android:id="@+id/registr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:text="@string/button_registr"
        android:textColor="@color/button"
        android:layout_marginLeft="@dimen/button_registr_left_AvtorizScreen"
        android:layout_marginTop="@dimen/button_registr_top_AvtorizScreen"
        android:onClick="onClick"
        app:cornerRadius="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:text="@string/avtoriz"
        android:textSize="@dimen/size_main_text_MainScreen"
        android:shadowColor="@color/teal_200"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="7"
        android:layout_marginTop="@dimen/place_avtorizText_top_AvtorizScreen"
        android:layout_marginLeft="@dimen/place_avtorizText_left_AvtorizScreen"
        />


        <EditText
            android:id="@+id/login"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:background="@drawable/border"
            android:hint="@string/login"
            android:padding="8dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="15dp"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:padding="8dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"/>



    <Button
        android:id="@+id/enter1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/button_text"
        android:textColor="@color/button"
        android:layout_marginLeft="@dimen/place_button_left_MainScreen"
        android:layout_marginTop="400dp"
        android:onClick="onClick"
        app:cornerRadius="20dp"/>


    </RelativeLayout>