<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fon3"
    tools:context=".RegistrScreen">

    <EditText
        android:id="@+id/reg_fio"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:hint="@string/fio"
        android:textSize="@dimen/size_login"
        android:padding="8dp"
        android:drawableLeft="@drawable/icon_fio"
        android:drawablePadding="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="15dp"
        />

    <EditText
        android:id="@+id/reg_login"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:hint="@string/login"
        android:textSize="@dimen/size_login"
        android:padding="8dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:hint="@string/password"
        android:textSize="@dimen/size_login"
        android:inputType="textPassword"
        android:padding="8dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="15dp"/>

    <Button
        android:id="@+id/enter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_registr_left_RegistScreen"
        android:layout_marginTop="@dimen/btn_reg_enter_top"
        android:backgroundTint="@color/main_color"
        android:onClick="onClick"
        android:text="@string/button_registr"
        android:textColor="@color/button"
        app:cornerRadius="20dp" />

</RelativeLayout>