<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fon3"
    android:orientation="vertical"
    app:layout_dodgeInsetEdges="bottom"
    tools:context=".MainScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/place_textL_left_MainScreen"
            android:layout_marginTop="@dimen/place_textL_top_MainScreen"
            android:text="@string/Lihachov"
            android:textColor="@color/text_mainScreen"
            android:textSize="@dimen/size_textLih_MainScreen"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/place_Lih_left_MainScreen"
            android:layout_marginTop="@dimen/place_Lih_top_MainScreen"
            android:text="@string/name_Lihachov"
            android:textColor="@color/text_mainScreen"
            android:textSize="@dimen/size_textLih_MainScreen"
            android:textStyle="italic" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/place_main_text_left_MainScreen"
        android:layout_marginTop="@dimen/place_main_text_top_MainScreen"
        android:shadowColor="@color/teal_200"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="7"
        android:text="@string/main_text"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/size_main_text_MainScreen"
        android:textStyle="bold" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/place_button_left_MainScreen"
        android:layout_marginTop="@dimen/place_button_top_MainScreen"
        android:backgroundTint="@color/main_color"
        android:onClick="onClick"
        android:text="@string/button_text"
        android:textColor="@color/button"
        android:textStyle="bold"
        />

</LinearLayout>